Google search console

--- a/mario-private-chef/src/layouts/Layout.astro
+++ b/mario-private-chef/src/layouts/Layout.astro
@@ -19,6 +19,7 @@ const {
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content={description} />
+    <meta name="google-site-verification" content="rVaRc0zZ0Pa-XEHS1zX7Hw2CP8bj-TdMnU8CoW_qkXM" />
     <title>{title}</title>
     <link rel="icon" type="image/png" href="/favicon-96x96.png" sizes="96x96" />
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
